--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Mobile application for tickets sale.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.7+7
+version: 1.0.10+10
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -29,6 +29,7 @@ dependencies:
   http: ^0.12.0+4
   flutter_svg: ^0.7.0
   pin_view: ^1.0.1
+  firebase_messaging: ^6.0.9
 
   # TODO: Move to dev_dependencies
   faker: ^1.0.0
