--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_svg: ^0.7.0
   pin_view: ^1.0.1
   firebase_messaging: ^6.0.9
+  image_picker: ^0.6.3+4
 
   # TODO: Move to dev_dependencies
   faker: ^1.0.0
